added some styling and fancy stuff

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-    a:nth-of-type().logo {
+    .logo {
         animation: logo-spin infinite 20s linear;
     }
 }
